<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0           http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.easybase</groupId>
	<artifactId>easy-base-parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>EasyBase Parent</name>
	<description>Parent POM for EasyBase Platform</description>

	<modules>
		<module>core</module>
		<module>headless</module>
		<module>application</module>
		<module>commons</module>
		<module>security</module>
		<module>context</module>
		<module>infrastructure</module>
		<module>store</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<spring.boot.version>3.2.0</spring.boot.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<liferay.source.formatter.version>1.0.1193</liferay.source.formatter.version>
		<skipTests>true</skipTests>
		<maven.test.skip>true</maven.test.skip>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>liferay-ce</id>
			<name>Liferay CE</name>
			<url>https://repository-cdn.liferay.com/nexus/content/groups/public</url>
		</repository>
	</repositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.1.0</version>
					<configuration>
						<mainClass>com.liferay.source.formatter.SourceFormatter</mainClass>
						<commandlineArgs>-Dsource.properties.file=${project.basedir}/source-formatter.properties</commandlineArgs>
						<includePluginDependencies>true</includePluginDependencies>
						<cleanupDaemonThreads>false</cleanupDaemonThreads>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>com.liferay</groupId>
							<artifactId>com.liferay.source.formatter</artifactId>
							<version>${liferay.source.formatter.version}</version>
						</dependency>
					</dependencies>
					<executions>
						<execution>
							<id>format-sources-build</id>
							<goals>
								<goal>java</goal>
							</goals>
							<phase>process-sources</phase>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring.boot.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>format-sources-build</id>
						<phase>none</phase>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>17</release>
					<parameters>true</parameters>
					<compilerArgs>
						<arg>-Xlint:unchecked</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>formatSource</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>java</goal>
								</goals>
								<phase>validate</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>